fix(Component): Fix webkit animation for Safari support

--- a/src/components/terminal-text.css
+++ b/src/components/terminal-text.css
@@ -48,8 +48,11 @@
 }
 
 @-webkit-keyframes blink {
+  50% {
+    border-color: transparent;
+  }
   100% {
-      border-color: tranparent;
+      border-color: transparent;
   }
 }
 
