--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  max-height: 100%;
   margin: 0;
   background-color: #141414;
   color: white;
