--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,3 +1,13 @@
+.projects-container {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  max-width: 892px;
+  margin: auto;
+  padding-bottom: 50px;
+}
+
 .project {
     position: relative;
     display: inline-block;
